fix links not turning green in dark mode

--- a/assets/dark.css
+++ b/assets/dark.css
@@ -116,7 +116,7 @@ body {
 }
 
 .github_link {
-    color: #0000ff;
+    color: #00ff00;
     text-decoration: none
 }
 
